--- a/Tiket.code-workspace.html
+++ b/Tiket.code-workspace.html
@@ -32,4 +32,19 @@
             margin-bottom: 15px;
             border: 1px solid #ccc;
             border-radius: 4px;
-       
+        }
+        input[type="submit"] {
+            background-color: #28a745;
+            color: white;
+            border: none;
+            padding: 10px;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        input[type="submit"]:hover {
+            background-color: #218838;
+        }
+    </style>
+</head>
+<body>
+
