--- a/Tiket.code-workspace.html
+++ b/Tiket.code-workspace.html
@@ -48,3 +48,20 @@
 </head>
 <body>
 
+<div class="container">
+    <h2>Registrasi Pengguna</h2>
+    <form action="/submit-registration" method="POST">
+        <label for="fullName">Nama Lengkap:</label>
+        <input type="text" id="fullName" name="fullName" required>
+
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required>
+
+        <label for="password">Kata Sandi:</label>
+        <input type="password" id="password" name="password" required>
+
+        <label for="confirmPassword">Konfirmasi Kata Sandi:</label>
+        <input type="password" id="confirmPassword" name="confirmPassword" required>
+
+        <label for="phone">Nomor Telepon:</label>
+        <input type="text" id="phone" name="phone" required>
