--- a/Tiket.code-workspace.html
+++ b/Tiket.code-workspace.html
@@ -65,3 +65,19 @@
 
         <label for="phone">Nomor Telepon:</label>
         <input type="text" id="phone" name="phone" required>
+
+        <label for="destination">Tujuan Wisata:</label>
+        <select id="destination" name="destination" required>
+            <option value="">Pilih Tujuan</option>
+            <option value="Bali">Bali</option>
+            <option value="Yogyakarta">Yogyakarta</option>
+            <option value="Jakarta">Jakarta</option>
+            <option value="Lombok">Lombok</option>
+        </select>
+
+        <input type="submit" value="Daftar">
+    </form>
+</div>
+
+</body>
+</html>
